# Tutorial_2024

./: .gitignore  Fibonacci.cpp  display_image  display_image.cpp  readme.md  t commit: task1 & task2 accomplished"
.github/workflows/: main.yml
doc/: Linux基础知识.md  Shell教程.md  WSL配置文档总结.md  readme.md  参考资料.md  团队协同的规范.md  基于ROS完成考核.md  基于git和GitHub完成考核任务.md  基础知识和概念.md  环境配置与准备.md  考核须知.md
output/: Fibonacci
tasks/: readme.md
tasks/week1（基础考核）/: readme.md  repo.md
tasks/week1（基础考核）/task1/: fib.cpp  main.cpp
tasks/week1（基础考核）/task2/: book.sh
tasks/week2/视觉组/: readme.md
tasks/week2/飞控组/: readme.md
tasks/week3/视觉组/: get_start.md  get_started.md  readme.md
workspace/: 1.c  Fibonacci  readme.md
workspace/Task1/: readme.md
workspace/Task1/Bash/: book.sh
workspace/Task1/Fibonacci/: CMakeLists.txt  Makefile  fibonacci
workspace/Task1/Fibonacci/demo/: main.cpp
workspace/Task1/Fibonacci/include/: Fibonacci.h
workspace/Task1/Fibonacci/src/: Fibonacci.cpp
workspace/Task2/: readme.md
workspace/Task2/my_example_app/: CMakeLists.txt  Kconfig  my_example_app.cpp
workspace/Task2/offboard_takeoff/: CMakeLists.txt  package.xml
workspace/Task2/offboard_takeoff_quaternion/: CMakeLists.txt  package.xml
workspace/Task3/: readme.md
workspace/Task3/multi_offboard_takeoff/: CMakeLists.txt  package.xml
workspace/Week1/: readme.md
workspace/Week1/Test_1/: CMakeLists.txt  test1  test1.cpp
workspace/Week1/Test_2/: book.sh
workspace/Week1/Week1Task1/: CMakeLists.txt  fibonacci.cpp
workspace/Week1/Week1Task2/: book.sh
workspace/Week2/: readme.md
workspace/Week2/Week2Task1/: image_processing.py
workspace/Week3/: car_controller.py  detect.py  gesture_control.launch  readme.md
workspace/first week/: Markdown_Lipengfei.md  first question.rar  second question.rar  third question.rar
workspace/second week/: Typora_lipengfei.md  readme_first.txt  vacode_lipengfei.md
workspace/task1/: CMakeLists.txt  fibonacci.c  readme.md  斐波那契数列源代码.cpp
workspace/task2/: book.sh
workspace/third week/: Typora_open.md
workspace/week1/: aa  book.sh  makefile  pro1  readme .md  readme.md
workspace/week1/task3/src/cpp_srvcli/: CMakeLists.txt  package.xml
workspace/week1/task3/src/cpp_srvcli/src/: client.cpp  service.cpp
workspace/week2/: readme.md
workspace/week2/任务2/src/your_project_directory/: CMakeLists.txt  package.xml
workspace/week2/任务2/src/your_project_directory/src/: main.cpp
workspace/week3/: readme.md  repo.md
(+781 files in other folders)
